--- a/calculator.html
+++ b/calculator.html
@@ -12,6 +12,7 @@
 		<form name="calculator">
 
 			<input id="display" type="text" name="display" readonly> <br>
+			<h1>This is my calculator application!</h1>
 
 			<input class="button mathButtons" type="button" value="+" onclick="calculator.display.value += ' + '">
 			<br>
